--- a/app/package.json
+++ b/app/package.json
@@ -6,11 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
     "react-app-rewire-alias": "^1.0.3",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
     "react-scripts": "^4.0.3",
@@ -20,8 +21,10 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/redux-saga": "^0.10.5",
+    "@types/http-proxy-middleware": "^1.0.0",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2"
   },
