Autocompletes changed type to 'dbpedia_resources' Stories results: # query update # results rendered as accordion # added 'load more...' feature --- Quality of life: aliases for common app directories

--- a/app/tsconfig.paths.json
+++ b/app/tsconfig.paths.json
@@ -2,19 +2,19 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "node_modules/*": [
+      "@node_modules/*": [
         "node_modules/*",
       ],
-      "services/*": [
+      "@services/*": [
         "src/services/*"
       ],
-      "config/*": [
+      "@config/*": [
         "src/config/*"
       ],
-      "components/*": [
+      "@components/*": [
         "src/components/*"
       ],
-      "views/*": [
+      "@views/*": [
         "src/views/*"
       ],
     }
